--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,10 +44,10 @@ import { Background } from "../module/background";
   <body
     class="bg-gradient-to-tr from-purple-200 via-fuchsia-300 to-yellow-100 bg-fill w-full object-cover"
   >
-    <!-- <audio controls autoplay hidden>
+    <audio controls autoplay hidden>
       <source src="lagu.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
-    </audio> -->
+    </audio>
 
     <header class="flex flex-col">
       <Background client:load />
