add menu for mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,16 +93,40 @@ export const prerender = true;
 </html>
 -->
         <!-- </section> -->
-        <div class="flex flex-col h-screen justify-center z-40">
-          <div
-            class="flex flex-col gap-4 w-full justify-center items-center px-24 py-4"
+        <div
+          class="flex flex-col gap-6 h-screen w-full justify-center z-40 px-24 py-4"
+        >
+          <h1
+            class="text-[#FF1493] font-mono font-bold text-3xl w-full text-center border border-white bg-white bg-opacity-50 cursor-pointer"
           >
-            <h1
-              class="text-[#FF1493] font-mono font-bold text-3xl w-full text-center border border-white bg-white bg-opacity-50 cursor-pointer"
-            >
-              Birth Day Invitation
-            </h1>
-            <img src="/aurora.png" width="200" alt="" />
+            Birth Day Invitation
+          </h1>
+          <img src="/aurora.png" width="200" alt="" />
+          <div
+            class="absolute bottom-6 left-6 bg-white w-[450px] py-2 rounded-md"
+          >
+            <div class="grid grid-cols-4 gap-2 px-4">
+              <div
+                class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
+              >
+                <img
+                  width="50"
+                  height="50"
+                  src="https://img.icons8.com/dusk/64/home--v1.png"
+                  alt="home--v1"
+                />
+              </div>
+              <div
+                class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
+              >
+                <img
+                  width="50"
+                  height="50"
+                  src="https://img.icons8.com/plasticine/100/calendar--v1.png"
+                  alt="calendar--v1"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </main>
