add audio and add icon

--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -45,10 +45,10 @@ export const prerender = true;
   <body
     class="bg-gradient-to-tr from-purple-200 via-fuchsia-300 to-yellow-100 bg-fill w-full object-cover h-screen overflow-hidden"
   >
-    <!-- <audio controls autoplay hidden>
+    <audio controls autoplay hidden>
       <source src="lagu.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
-    </audio> -->
+    </audio>
 
     <header class="flex flex-col">
       <main class="px-10 z-40">
@@ -100,7 +100,7 @@ export const prerender = true;
           </div>
           <p class="text-white font-bold text-center text-lg">
             Di hari ulang tahun aku yang ke 14 , Ola mau mengundang kalian untuk
-            datang ke ...
+            datang dan berkumpul di
           </p>
         </div>
 
@@ -136,6 +136,16 @@ export const prerender = true;
                 height="50"
                 src="https://img.icons8.com/plasticine/100/calendar--v1.png"
                 alt="calendar--v1"
+              />
+            </div>
+            <div
+              class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
+            >
+              <img
+                width="50"
+                height="50"
+                src="https://img.icons8.com/bubbles/50/topic.png"
+                alt="topic"
               />
             </div>
           </div>
