improvement : add section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ export const prerender = true;
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
-    <title>Astro</title>
+    <title>Invitation</title>
   </head>
   <body
     class="bg-gradient-to-tr from-purple-200 via-fuchsia-300 to-yellow-100 bg-fill w-full object-cover h-screen overflow-hidden"
@@ -23,7 +23,7 @@ export const prerender = true;
       <Background client:load />
       <main class="px-10 z-40">
         <div
-          class="flex flex-col gap-6 h-screen w-full justify-center z-40 px-24 py-4"
+          class="flex flex-col gap-6 h-screen w-full justify-center z-40 py-4"
         >
           <h1
             class="text-[#FF1493] font-mono font-bold text-3xl w-full text-center border border-white bg-white bg-opacity-50 cursor-pointer"
@@ -31,8 +31,9 @@ export const prerender = true;
             Birth Day Invitation
           </h1>
           <a href="/party">
-            <button class="rounded-md bg-pink-700 w-full text-white p-2"
-              >Click me to open</button
+            <button
+              class="rounded-md bg-pink-700 w-[200px] ml-12 text-white p-2"
+              >Buka Undangan</button
             ></a
           >
         </div>
