--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -1,5 +1,5 @@
 ---
-import { Background } from "../module/background";
+import { Navbar } from "../module/navbar";
 
 export const prerender = true;
 // import { api } from "../service";
@@ -43,7 +43,7 @@ export const prerender = true;
     <title>Astro</title>
   </head>
   <body
-    class="bg-gradient-to-tr from-purple-200 via-fuchsia-300 to-yellow-100 bg-fill w-full object-cover h-screen overflow-hidden"
+    class="bg-gradient-to-tr from-purple-200 via-fuchsia-300 to-yellow-100 bg-fill w-full object-cover h-full"
   >
     <audio controls autoplay hidden>
       <source src="lagu.mp3" type="audio/mp3" />
@@ -52,8 +52,40 @@ export const prerender = true;
 
     <header class="flex flex-col">
       <main class="px-10 z-40">
-        <!-- <section>
-          <form method="POST" class="w-full">
+        <section class="flex flex-col gap-4 pt-20">
+          <h1 class="text-pink-600 font-semibold text-center text-2xl">
+            Hallo teman -teman , keluarga dan saudara saudara Ola tercintaaa
+          </h1>
+          <div class="flex w-full justify-center">
+            <img src="/aurora.png" width="200" alt="" />
+          </div>
+          <p class="text-white font-bold text-center text-lg">
+            Di hari ulang tahun aku yang ke 14 , Ola mau mengundang kalian untuk
+            datang dan berkumpul di
+          </p>
+
+          <Navbar />
+        </section>
+        <section
+          class="flex flex-col w-full h-full items-center justify-center pt-24 py-8 gap-6"
+        >
+          <div
+            class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
+          >
+            Alamat Rumahku
+          </div>
+
+          <img
+            width="96"
+            height="96"
+            src="https://img.icons8.com/color/96/map-marker.png"
+            alt="map-marker"
+          />
+          <p class="font-bold text-center">
+            Jalan Jendral sudirman No.824 di Depan Panama Park
+          </p>
+          <Navbar />
+          <!-- <form method="POST" class="w-full">
             <label>
               Full Name:
               <input class="my-4" type="text" name="fullname" required />
@@ -76,7 +108,7 @@ export const prerender = true;
               </select>
             </label>
             <button class="bg-blue-400 rounded-md mx-4 p-2">Submit</button>
-          </form>
+          </form> -->
 
           <!-- {
           comments?.data.map((data) => (
@@ -90,66 +122,32 @@ export const prerender = true;
   </body>
 </html>
 -->
-        <!-- </section> -->
-        <div class="flex flex-col gap-4 pt-20">
-          <h1 class="text-pink-600 font-semibold text-center text-2xl">
-            Hallo teman -teman , keluarga dan saudara saudara Ola tercintaaa
-          </h1>
-          <div class="flex w-full justify-center">
-            <img src="/aurora.png" width="200" alt="" />
-          </div>
-          <p class="text-white font-bold text-center text-lg">
-            Di hari ulang tahun aku yang ke 14 , Ola mau mengundang kalian untuk
-            datang dan berkumpul di
-          </p>
-        </div>
-
-        <div
-          class="absolute bottom-6 left-6 bg-white w-[450px] py-2 rounded-md"
+        </section>
+        <section
+          class="flex flex-col w-full h-[500px] items-center justify-center pt-24 py-8 gap-6"
         >
-          <div class="grid grid-cols-4 gap-2 px-4">
-            <div
-              class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
-            >
-              <img
-                width="50"
-                height="50"
-                src="https://img.icons8.com/bubbles/50/confetti.png"
-                alt="confetti"
-              />
-            </div>
-            <div
-              class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
-            >
-              <img
-                width="50"
-                height="50"
-                src="https://img.icons8.com/dusk/64/home--v1.png"
-                alt="home--v1"
-              />
-            </div>
-            <div
-              class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
-            >
-              <img
-                width="50"
-                height="50"
-                src="https://img.icons8.com/plasticine/100/calendar--v1.png"
-                alt="calendar--v1"
-              />
-            </div>
-            <div
-              class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
-            >
-              <img
-                width="50"
-                height="50"
-                src="https://img.icons8.com/bubbles/50/topic.png"
-                alt="topic"
-              />
-            </div>
+          <div
+            class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
+          >
+            Janga Lupa Tanggal dan Harinya yaaa ...
           </div>
-        </div>
+          <div class="flex items-center">
+            <img
+              width="96"
+              height="96"
+              src="https://img.icons8.com/color/96/calendar-9.png"
+              alt="calendar-9"
+            />
+            <p class="font-bold text-blue-600">
+              Pada Hari Minggu ,Tanggal 9 Juli 2023
+            </p>
+          </div>
+          <p>
+            Kita akan buat 2 sesi nihh... datang lebih cepat lebih baik ya :)
+          </p>
+          <p>Sesi 1 untuk teman-teman : jam 13.00</p>
+          <p>Sesi 2 untuk keluarga : jam 16.00</p>
+        </section>
       </main>
     </header>
   </body>
