improvement : add id to form comments

--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -54,7 +54,7 @@ export const prerender = true;
       <main class="px-10 z-40">
         <section
           id="home"
-          class="flex flex-col gap-16 h-screen items-center justify-center"
+          class="flex flex-col gap-14 h-screen items-center justify-center"
         >
           <h1 class="text-pink-600 font-semibold text-center text-2xl">
             Hallo teman -teman , keluarga dan saudara saudara Ola tercintaaa
@@ -68,12 +68,11 @@ export const prerender = true;
             Di hari ulang tahun Ola yang ke 14 , Ola mau mengundang kalian untuk
             datang dan berkumpul di rumahku
           </p>
-
           <Navbar />
         </section>
         <section
           id="alamat"
-          class="flex flex-col w-full h-screen items-center justify-between pt-24 py-8 gap-6"
+          class="flex flex-col w-full h-screen items-center justify-between pt-24 py-12 gap-6"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
@@ -95,7 +94,7 @@ export const prerender = true;
         </section>
         <section
           id="jadwal"
-          class="flex flex-col w-full h-screen items-center justify-between pt-24 py-8 gap-12"
+          class="flex flex-col w-full h-screen items-center justify-between pt-24 py-12 gap-10"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
@@ -131,6 +130,7 @@ export const prerender = true;
           </div>
         </section>
         <section
+          id="comments"
           class="flex flex-col h-screen w-full justify-between items-center py-8"
         >
           <div
