improvement : test audio on mobile

--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -45,7 +45,7 @@ export const prerender = true;
   <body
     class="bg-gradient-to-tr from-purple-200 via-fuchsia-300 to-yellow-100 bg-fill w-full object-cover h-full"
   >
-    <audio controls autoplay hidden>
+    <audio controls autoplay>
       <source src="lagu.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
     </audio>
@@ -72,7 +72,7 @@ export const prerender = true;
         </section>
         <section
           id="alamat"
-          class="flex flex-col w-full h-screen items-center justify-between pt-24 py-12 gap-6"
+          class="flex flex-col w-full h-screen items-center justify-between pt-20 py-12 gap-6"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
@@ -94,7 +94,7 @@ export const prerender = true;
         </section>
         <section
           id="jadwal"
-          class="flex flex-col w-full h-screen items-center justify-between pt-24 py-12 gap-10"
+          class="flex flex-col w-full h-screen items-center justify-between pt-20 py-12 gap-10"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
