improvement : test layout

--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -72,7 +72,7 @@ export const prerender = true;
         </section>
         <section
           id="alamat"
-          class="flex flex-col w-full h-screen items-center justify-between pt-20 py-12 gap-6"
+          class="flex flex-col w-full h-screen items-center justify-between py-12 gap-4"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
@@ -94,7 +94,7 @@ export const prerender = true;
         </section>
         <section
           id="jadwal"
-          class="flex flex-col w-full h-screen items-center justify-between pt-20 py-12 gap-10"
+          class="flex flex-col w-full h-screen items-center justify-between py-12 gap-8"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
@@ -162,7 +162,7 @@ export const prerender = true;
             </label>
             <button class="bg-blue-400 rounded-md mx-4 p-2">Submit</button>
           </form>
-          <div class="bg-white w-[350px] h-[400px] rounded-md"></div>
+          <div class="bg-white w-[350px] h-[300px] rounded-md"></div>
           <div>
             <Navbar />
           </div>
