--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -1,6 +1,4 @@
 ---
-import { Navbar } from "../module/navbar";
-
 export const prerender = true;
 // import { api } from "../service";
 
@@ -28,6 +26,23 @@ export const prerender = true;
 //   }
 // }
 ---
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const navLinks = document.querySelectorAll(".nav-link");
+
+    navLinks.forEach(function (link) {
+      link.addEventListener("click", function (event) {
+        event.preventDefault();
+
+        const targetId = link.getAttribute("href").slice(1);
+        const targetElement = document.getElementById(targetId);
+
+        targetElement.scrollIntoView({ behavior: "smooth" });
+      });
+    });
+  });
+</script>
 
 <html lang="en">
   <head>
@@ -171,7 +186,59 @@ export const prerender = true;
         </section>
       </main>
       <div>
-        <Navbar client:load />
+        <div class="fixed bottom-6 left-8 bg-white w-[350px] py-2 rounded-md">
+          <div class="grid grid-cols-4 gap-2 px-4">
+            <a href="#home">
+              <div
+                class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
+              >
+                <img
+                  width="50"
+                  height="50"
+                  src="https://img.icons8.com/bubbles/50/confetti.png"
+                  alt="confetti"
+                />
+              </div>
+            </a>
+            <a href="#alamat">
+              {" "}
+              <div
+                class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
+              >
+                <img
+                  width="50"
+                  height="50"
+                  src="https://img.icons8.com/dusk/64/home--v1.png"
+                  alt="home--v1"
+                />
+              </div>
+            </a>
+            <a href="#jadwal">
+              <div
+                class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
+              >
+                <img
+                  width="50"
+                  height="50"
+                  src="https://img.icons8.com/plasticine/100/calendar--v1.png"
+                  alt="calendar--v1"
+                />
+              </div>
+            </a>
+            <a href="#comments">
+              <div
+                class="flex justify-center items-center w-20 h-20 rounded-full bg-pink-100"
+              >
+                <img
+                  width="50"
+                  height="50"
+                  src="https://img.icons8.com/bubbles/50/topic.png"
+                  alt="topic"
+                />
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
     </header>
   </body>
