improvement : layout and without form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,12 +30,14 @@ export const prerender = true;
           >
             Birth Day Invitation
           </h1>
-          <a href="/party">
-            <button
-              class="rounded-md bg-pink-700 w-[200px] ml-12 text-white p-2"
-              >Buka Undangan</button
-            ></a
-          >
+          <div class="flex w-full justify-center">
+            <a href="/party">
+              <button
+                class="rounded-md bg-pink-700 w-[200px] ml-12 text-white p-2"
+                >Buka Undangan</button
+              ></a
+            >
+          </div>
         </div>
       </main>
     </header>
