--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -69,7 +69,7 @@ export const prerender = true;
       <main class="px-10 z-40">
         <section
           id="home"
-          class="flex flex-col gap-20 h-screen items-center justify-start pt-16"
+          class="flex flex-col gap-20 h-full items-center justify-start pt-16"
         >
           <h1 class="text-pink-600 font-semibold text-center text-2xl">
             Hallo teman -teman , keluarga dan saudara saudara Ola tercintaaa
@@ -86,7 +86,7 @@ export const prerender = true;
         </section>
         <section
           id="alamat"
-          class="flex flex-col w-full h-screen items-center justify-center py-12 gap-4"
+          class="flex flex-col w-full h-full items-center justify-center py-12 gap-4"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
@@ -95,8 +95,6 @@ export const prerender = true;
           </div>
           <div class="flex flex-col w-full justify-center items-center">
             <img
-              width="200"
-              height="200"
               src="https://img.icons8.com/color/96/map-marker.png"
               alt="map-marker"
             />
@@ -107,7 +105,7 @@ export const prerender = true;
         </section>
         <section
           id="jadwal"
-          class="flex flex-col w-full h-screen items-center justify-center py-12 gap-8"
+          class="flex flex-col w-full h-full items-center justify-center py-12 gap-8"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
@@ -140,49 +138,28 @@ export const prerender = true;
           </div>
         </section>
         <section
-          id="comments"
-          class="flex flex-col h-screen w-full justify-between items-center py-8"
+          class="flex flex-col h-full w-full justify-center items-center py-8"
         >
           <div
             class="bg-pink-500 rounded-md bg-opacity-50 p-1 border border-white text-white w-full justify-center text-center text-2xl"
           >
-            Doa darimu sangat berharga bagiku ..
+            Kehadiranmu sangat berharga bagiku ..
           </div>
-          <form method="POST" class="w-full">
-            <label>
-              Full Name:
-              <input class="my-4" type="text" name="fullname" required />
-            </label>
-            <br />
+          <div class="flex gap-4 pt-20 w-full justify-center items-center">
+            <img src="/gift.png" alt="" />
 
-            <label class="flex items-center my-4">
-              Coments:
-              <textarea
-                name="comments"
-                required
-                minlength="20"
-                class="w-[500px] mx-4"></textarea>
-            </label>
-            <label>
-              Kehadiran :
-              <select name="attendance" id="">
-                <option value="hadir">hadir</option>
-                <option value="tidak">tidak</option>
-              </select>
-            </label>
-            <button class="bg-blue-400 rounded-md mx-4 p-2">Submit</button>
-          </form>
-          <div class="bg-white w-[350px] h-[300px] rounded-md"></div>
-
-          <!-- {
-            comments?.data.map((data) => (
-              <ul>
-                <li class="bg-white p-1">{data?.attributes.Full_Name}</li>
-                <li>{data?.attributes.Attendance ? "Hadir" : "Tidak Hadir"}</li>
-                <li>{data?.attributes.Comment}</li>
-              </ul>
-            ))
-          }  -->
+            <p class="text-pink-700">
+              bukan tentang isinya tapi Ola harap didalemnya terdapat doa doa
+              terbaik dan kenangan terindah buat Ola <span
+                ><img
+                  width="20"
+                  height="20"
+                  src="https://img.icons8.com/office/16/filled-like--v1.png"
+                  alt="filled-like--v1"
+                /></span
+              >
+            </p>
+          </div>
         </section>
       </main>
     </header>
