improvement : test audio

--- a/src/pages/party.astro
+++ b/src/pages/party.astro
@@ -60,7 +60,7 @@ export const prerender = true;
   <body
     class="bg-gradient-to-tr from-purple-200 via-fuchsia-300 to-yellow-100 bg-fill w-full object-cover h-full"
   >
-    <audio controls autoplay hidden>
+    <audio controls>
       <source src="lagu.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
     </audio>
@@ -152,8 +152,6 @@ export const prerender = true;
               bukan tentang isinya tapi Ola harap didalemnya terdapat doa doa
               terbaik dan kenangan terindah buat Ola <span
                 ><img
-                  width="20"
-                  height="20"
                   src="https://img.icons8.com/office/16/filled-like--v1.png"
                   alt="filled-like--v1"
                 /></span
