--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ export const prerender = true;
       <Background client:load />
       <main class="px-10 z-40">
         <div
-          class="flex flex-col gap-6 h-screen overflow-hidden w-full justify-center z-40 py-4"
+          class="flex flex-col gap-6 h-screen overflow-hidden w-full justify-center z-40"
         >
           <h1
             class="text-[#FF1493] font-mono font-bold text-3xl w-full text-center border border-white bg-white bg-opacity-50 cursor-pointer"
